styled form, forced required username input, tested no duplicate dest add to existing username in storage

--- a/about.html
+++ b/about.html
@@ -16,36 +16,49 @@
   </header>
 
   <section class = "member">
-  <figure class = "thumbnail"><img src="https://placehold.it/100x100/ddd"></figure>
+  <figure class = "thumbnail"><img src="./img/Ashley_Pic.JPG"></figure>
   <figcaption> Ashley Casimir <br></figcaption>
     <section class = "pitch">
-      <h3>I Am Ashley -- I'm First Because of the "A" -- I'm Learning Python, Too</h3>
+      <h3>I Am Ashley--I'm First Because of my "A"--I'm Learning Python and Other Stuff</h3>
       <br>  
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dicta sequi ex 
-        cumque perferendis dolores unde eos impedit explicabo. Perspiciatis ut numquam 
-        ipsa, nihil sint qui quo aperiam voluptatibus est.
+      <p>My Name is Ashley and I’m a Software Developer! My love for technology started when I worked 
+        for Apple as  a Genius back in 2008. After 5 years of working at Apple, I Joined the Navy 
+        where I spent ~7 years doing construction (2.5 years) and working on submarines, in particular 
+        the USS Michigan (SSGN 727), as a Fire Control Specialist (FT). While working as an FT I was a 
+        system administrator for our classified networks on board as well as an operator for our
+         weapons systems. I separated from the Navy in November 2019 which led me to my current 
+         position as a Site Reliability Engineer for Oracle Cloud Infrastructure. What I love most about 
+         software development is the challenge it gives me to create solutions for everyday issues! 
+         All my adult life I have looked for a job where there was always something to learn and 
+         software development has proven to be it.
+
       </p>
     </section>
   </section>
 
   <section class = "member">
-  <figure class = "thumbnail"><img src="https://placehold.it/100x100/ddd"></figure>
+  <figure class = "thumbnail"><img src="./img/Chris.jpg"></figure>
   <figcaption> Chris Bortel <br></figcaption>
     <section class = "pitch">
-      <h3>I Am Chris -- I Have a Wife -- I Have a Dog -- I Bike and Stuff</h3>
+      <h3>I Am Chris--I Have a Dog--I Bike and Stuff--And Stuff</h3>
       <br>  
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dicta sequi ex 
-        cumque perferendis dolores unde eos impedit explicabo. Perspiciatis ut numquam 
-        ipsa, nihil sint qui quo aperiam voluptatibus est.
+      <p>I am a Seattle-based software developer. Prior to pursuing this field, 
+        I spent five years working in special education, where I thoroughly enjoyed working 
+        with students and their families in order for them to get the most out of their education. 
+        My interest in pursuing a career in web development stemmed from my love for design 
+        and problem solving to help clients meet their needs. Thriving in an environment that 
+        allows for constant learning and professional development, I am excited to see where 
+        web development will take me.
+
       </p>
     </section>
   </section>
 
   <section class = "member">
-  <figure class = "thumbnail"><img src="https://placehold.it/100x100/ddd"></figure>
+  <figure class = "thumbnail"><img src="./img/henry.jpg"></figure>
   <figcaption> Henry Funk <br></figcaption>
     <section class = "pitch">
-      <h3>I Am Henry -- I Am Awesome -- I like Outdoors Stuff -- And Stuff</h3>
+      <h3>I Am Henry--I Am Awesome--I like Outdoors Stuff--And Stuff</h3>
       <br>  
       <p> I worked for years as a Wilderness Guide in the summers, Environmental Educator 
       in the fall and spring, and Snowboard Instructor in the winter. Life was good. In 
@@ -66,7 +79,7 @@
   <figcaption> Kim Damalas <br></figcaption>
   
     <section class = "pitch">
-      <h3>Semi-Retired -- Math Nerd -- Scotch Enthusiast -- Coding Newbie</h3>
+      <h3>I am Kim--I'm a Math Nerd--I'm a Scotch Enthusiast--I like Drawing And Stuff</h3>
       <br>  
       <p>I’m a 25-year Air Force veteran who is passionate about social issues, specifically veteran- and
       economic inequality-centric issues, and I'd like to contribute to solutions in those areas. My 
@@ -79,7 +92,8 @@
   
   <footer>
     <a href="./index.html">Back to Home</a>
-    <p> &copy;2020  Team Vacay: Ashley Casimir, Chris Bortel, Henry Funk, Kim Damalas </p> 
+    <p></p>
+    <p> &copy;2020  Team Vacay: Ashley Casimir, Chris Bortel, Henry Funk, Kim Damalas <br>GH: @Chris-Bortel/Vacay</p> 
   </footer>
 
 </body>
