--- a/granada.html
+++ b/granada.html
@@ -108,6 +108,8 @@
   </main>
   <script src="./js/app.js"></script>
   <script src="./js/storage.js"></script>
+  <script src="./js/saved.js"></script>
+
   <footer>
     <a href="./about.html">Meet The Team</a>
     <p>&copy;2020  Team Vacay: Ashley Casimir, Chris Bortel, Henry Funk, Kim Damalas </p> 
