--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
   </main>
   <footer>
       <a href="./about.html">Meet The Team</a>
-      <p>&copy;2020  Team Vacay: Ashley Casimir, Chris Bortel, Henry Funk, Kim Damalas </p> 
-    
-   
+      <p></p>
+      <p> &copy;2020  Team Vacay: Ashley Casimir, Chris Bortel, Henry Funk, Kim Damalas <br>GH: @Chris-Bortel/Vacay</p> 
+     
   </footer>
 
   <script src="./js/storage.js"></script>
