--- a/tramso.html
+++ b/tramso.html
@@ -111,6 +111,8 @@
   </main>
   <script src="./js/app.js"></script>
   <script src="./js/storage.js"></script>
+  <script src="./js/saved.js"></script>
+
   <footer>
     <a href="./about.html">Meet The Team</a>
     <p>&copy;2020  Team Vacay: Ashley Casimir, Chris Bortel, Henry Funk, Kim Damalas </p> 
