fixed file path

--- a/saved.html
+++ b/saved.html
@@ -16,7 +16,7 @@
     <!-- <a href ="los-angeles.html">LINK TO LOS ANGELES FOR TEST</a> -->
 
 
-    <a href="../index.html">Back To Home</a>
+    <a href="./index.html">Back To Home</a>
     <nav>
       <!-- dropdown menus will go here! -->
       <form>
