--- a/saved.html
+++ b/saved.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/reset.css" type="text/css">
-  <link rel="stylesheet" href="./css/saved.css" type="text/css">
+  <link rel="stylesheet" href="./css/Saved.css" type="text/css">
   <title>Saved Destinations</title>
 </head>
 <!-- <body onload="savedPage()"> -->
